--- a/less/contact.less
+++ b/less/contact.less
@@ -112,14 +112,14 @@
                 border: 1px solid #161B28;
                 outline: none;
                 transition: 0.4s;
-              }
+              
 
-              .active, .question:hover {
+              &:hover {
                 background-color: #161B28;
                 color: #fff;
 
               }
-
+        }
               .answer {
                 padding: 15px 18px 15px 18px;
                 background-color: white;
